build.log
⚡ Found 3 strongly connected components which includes at least one cycle each
cycle(001) ∈ α: DisputeCoordinator ~~{"DisputeDistributionMessage"}~~> DisputeDistribution ~~{"DisputeCoordinatorMessage"}~~>  *
cycle(002) ∈ β: CandidateBacking ~~{"CollatorProtocolMessage"}~~> CollatorProtocol ~~{"CandidateBackingMessage"}~~>  *
cycle(003) ∈ γ: NetworkBridgeRx ~~{"GossipSupportMessage"}~~> GossipSupport ~~{"NetworkBridgeRxMessage"}~~>  *
    Checking ziggurat-node v0.1.0 (/Users/conr2d/Projects/noir/ziggurat/node)
warning: unused import: `backend::*`
  --> ziggurat/node/src/eth/mod.rs:23:9
   |
23 | pub use backend::*;
   |         ^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused variable: `eth_rpc_builder`
   --> ziggurat/node/src/service.rs:303:6
    |
303 |     let eth_rpc_builder = {};
    |         ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_eth_rpc_builder`
    |
    = note: `#[warn(unused_variables)]` on by default

error[E0277]: the trait bound `C: ProvideRuntimeApi<_>` is not satisfied
  --> ziggurat/node/src/eth/backend.rs:67:5
   |
67 |                 overrides,
   |                 ^^^^^^^^^ the trait `ProvideRuntimeApi<_>` is not implemented for `C`, which is required by `StorageOverrideHandler<_, C, _>: StorageOverride<_>`
   |
   = help: the trait `ProvideRuntimeApi<Block>` is implemented for `sc_service::client::client::Client<B, E, Block, RA>`
   = note: required for `StorageOverrideHandler<_, C, _>` to implement `StorageOverride<_>`
   = note: required for the cast from `Arc<StorageOverrideHandler<_, C, _>>` to `Arc<(dyn StorageOverride<_> + 'static)>`

error[E0277]: the trait bound `C: StorageProvider<_, _>` is not satisfied
  --> ziggurat/node/src/eth/backend.rs:67:5
   |
67 |                 overrides,
   |                 ^^^^^^^^^ the trait `StorageProvider<_, _>` is not implemented for `C`, which is required by `StorageOverrideHandler<_, C, _>: StorageOverride<_>`
   |
   = help: the trait `StorageProvider<Block, B>` is implemented for `sc_service::client::client::Client<B, E, Block, RA>`
   = note: required for `StorageOverrideHandler<_, C, _>` to implement `StorageOverride<_>`
   = note: required for the cast from `Arc<StorageOverrideHandler<_, C, _>>` to `Arc<(dyn StorageOverride<_> + 'static)>`

For more information about this error, try `rustc --explain E0277`.
warning: `ziggurat-node` (bin "ziggurat") generated 2 warnings
error: could not compile `ziggurat-node` (bin "ziggurat") due to 2 previous errors; 2 warnings emitted
